--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <title>A JavaScript project</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 
   <style>
@@ -29,8 +30,10 @@
 <body>
   <h1>A JavaScript project</h1>
   <abc></abc>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src = "https://d3js.org/d3.v4.min.js"></script>
   <script>
+
     var treeData =
       {
         "name": "NODE NAME 1",  
@@ -42,6 +45,7 @@
             "subname": "CODE N1",    
             "fill":"blue"
           },
+          { "name": "NODE NAME 2.2","subname": "CODE N1"  ,"fill":"blue" },
           { "name": "NODE NAME 2.3","subname": "CODE N1","fill":"blue",
           "children": [
               { "name": "NODE NAME 3.3","fill":"blue","subname": "CODE N1",
@@ -70,7 +74,7 @@
     // append the svg object to the body of the page
     // appends a 'group' element to 'svg'
     // moves the 'group' element to the top left margin
-    var svg = d3.select("abc").append("svg")
+    var svg = d3.select("body").append("svg")
         .attr("width", width + margin.right + margin.left)
         .attr("height", height + margin.top + margin.bottom)
       .append("g")
@@ -163,9 +167,11 @@
       var nodeUpdate = nodeEnter.merge(node);
     
       // Transition to the proper position for the node
-      node.transition()
-      .duration(duration)
-      .attr("transform", function(d) { p = calcLeft(d); return "translate(" + p.x + "," + p.y + ")"; });
+      nodeUpdate.transition()
+        .duration(duration)
+        .attr("transform", function(d) { 
+            return "translate(" + d.y + "," + d.x + ")";
+         });
     
       // Update the node attributes and style
       nodeUpdate.select('circle.node')
