--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>A JavaScript project</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- <link href="https://unpkg.com/tabulator-tables@5.0.7/dist/css/tabulator.min.css" rel="stylesheet"> -->
+
   <link rel="stylesheet" href="style.css">
 
   <style>
@@ -28,11 +30,81 @@
 
 
 <body>
-  <h1>A JavaScript project</h1>
-  <abc></abc>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+
+      </div>
+      <div class="col-10">
+        <div class="row"></div>
+        <h1>Proof of Liability</h1>
+        </div>
+        <div class="row">
+          <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
+            <button class="nav-link active" id="nav-data-tab" data-bs-toggle="tab" data-bs-target="#nav-data" type="button" role="tab" aria-controls="nav-data" aria-selected="true">Load Data</button>
+            <button class="nav-link" id="nav-tree-tab" data-bs-toggle="tab" data-bs-target="#nav-tree" type="button" role="tab" aria-controls="nav-tree" aria-selected="false">Build Tree</button>
+            <button class="nav-link" id="nav-verify-tab" data-bs-toggle="tab" data-bs-target="#nav-verify" type="button" role="tab" aria-controls="nav-verify" aria-selected="false">Verify Audit</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="nav-data" role="tabpanel" aria-labelledby="nav-data-tab">
+              <div class="row"><h2>Insert Data</h2></div>
+              <div class="row"><div id="users-table"></div></div></div>
+            <div class="tab-pane fade" id="nav-tree" role="tabpanel" aria-labelledby="nav-tree-tab"><graph></graph></div>
+            <div class="tab-pane fade" id="nav-verify" role="tabpanel" aria-labelledby="nav-verify-tab">Verify auth path</div>
+          </div>
+      </div>
+      </div>
+      <div class="col">
+
+      </div>
+    </div>
+  </div>
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src = "https://d3js.org/d3.v4.min.js"></script>
+  <!-- <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.0.7/dist/js/tabulator.min.js"></script> -->
+
   <script>
+
+      // var tabledata = [
+      //     {id:1, name:"Oli Bob", progress:12, gender:"male", rating:1, col:"red", dob:"19/02/1984", car:1},
+      //     {id:2, name:"Mary May", progress:1, gender:"female", rating:2, col:"blue", dob:"14/05/1982", car:true},
+      //     {id:3, name:"Christine Lobowski", progress:42, gender:"female", rating:0, col:"green", dob:"22/05/1982", car:"true"},
+      //     {id:4, name:"Brendon Philips", progress:100, gender:"male", rating:1, col:"orange", dob:"01/08/1980"},
+      //     {id:5, name:"Margret Marmajuke", progress:16, gender:"female", rating:5, col:"yellow", dob:"31/01/1999"},
+      //     {id:6, name:"Frank Harbours", progress:38, gender:"male", rating:4, col:"red", dob:"12/05/1966", car:1},
+      // ];
+
+
+      // var table = new Tabulator("#users-table", {
+      //     data:tabledata,           //load row data from array
+      //     layout:"fitColumns",      //fit columns to width of table
+      //     responsiveLayout:"hide",  //hide columns that dont fit on the table
+      //     tooltips:true,            //show tool tips on cells
+      //     addRowPos:"top",          //when adding a new row, add it to the top of the table
+      //     history:true,             //allow undo and redo actions on the table
+      //     pagination:"local",       //paginate the data
+      //     paginationSize:7,         //allow 7 rows per page of data
+      //     movableColumns:true,      //allow column order to be changed
+      //     resizableRows:true,       //allow row order to be changed
+      //     initialSort:[             //set the initial sort order of the data
+      //         {column:"name", dir:"asc"},
+      //     ],
+      //     columns:[                 //define the table columns
+      //         {title:"Name", field:"name", editor:"input"},
+      //         {title:"Task Progress", field:"progress", hozAlign:"left", formatter:"progress", editor:true},
+      //         {title:"Gender", field:"gender", width:95, editor:"select", editorParams:{values:["male", "female"]}},
+      //         {title:"Rating", field:"rating", formatter:"star", hozAlign:"center", width:100, editor:true},
+      //         {title:"Color", field:"col", width:130, editor:"input"},
+      //         {title:"Date Of Birth", field:"dob", width:130, sorter:"date", hozAlign:"center"},
+      //         {title:"Driver", field:"car", width:90,  hozAlign:"center", formatter:"tickCross", sorter:"boolean", editor:true},
+      //     ],
+      // });
 
     var treeData =
       {
@@ -74,7 +146,7 @@
     // append the svg object to the body of the page
     // appends a 'group' element to 'svg'
     // moves the 'group' element to the top left margin
-    var svg = d3.select("body").append("svg")
+    var svg = d3.select("graph").append("svg")
         .attr("width", width + margin.right + margin.left)
         .attr("height", height + margin.top + margin.bottom)
       .append("g")
