--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,15 @@
 <head>
   <title>A JavaScript project</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!-- <link href="https://unpkg.com/tabulator-tables@5.0.7/dist/css/tabulator.min.css" rel="stylesheet"> -->
 
   <link rel="stylesheet" href="style.css">
 
   <style>
     .node rect {
-        stroke-width: 3px;
+        stroke-width: 10px;
+        border-width: 10px;
+        border-style: solid;
+        border-color: black;
     }
 
     .node text {
@@ -30,7 +32,6 @@
 
 
 <body>
-
   <div class="container">
     <div class="row">
       <div class="col">
@@ -50,7 +51,69 @@
         <div class="row">
           <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-data" role="tabpanel" aria-labelledby="nav-data-tab">
-              <div class="row"><h2>Insert Data</h2></div>
+              <div class="row">
+                <div class="card">
+                  <div class="card-body">
+                    <div id="maintable-table" class="table-editable">
+                      <table class="table table-bordered table-sm table-responsive-md table-striped text-center">
+                        <thead>
+                          <tr>
+                            <th class="text-center">User Id</th>
+                            <th class="text-center">Balance</th>
+                            <th class="text-center">commitment</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td class="pt-3-half" contenteditable="true">Ron@gmail.com</td>
+                            <td class="pt-3-half" contenteditable="true">30</td>
+                            <td class="pt-3-half" contenteditable="true">0bae...d956</td>
+                            <td>
+                              <span class="table-remove"
+                                ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
+                                  Remove
+                                </button></span
+                              >
+                            </td>
+                          </tr>
+                          <!-- This is our clonable table line -->
+                          <tr>
+                            <td class="pt-3-half" contenteditable="true">Shimi@gmail.com</td>
+                            <td class="pt-3-half" contenteditable="true">45</td>
+                            <td class="pt-3-half" contenteditable="true">15aj...b923</td>
+                            <td>
+                              <span class="table-remove"
+                                ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
+                                  Remove
+                                </button></span
+                              >
+                            </td>
+                          </tr>
+                          <!-- This is our clonable table line -->
+                          <tr>
+                            <td class="pt-3-half" contenteditable="true">Guadalupe@gmail.com</td>
+                            <td class="pt-3-half" contenteditable="true">3</td>
+                            <td class="pt-3-half" contenteditable="true">05ag...bb03</td>
+                            <td>
+                              <span class="table-remove"
+                                ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
+                                  Remove
+                                </button></span
+                              >
+                            </td>
+                          </tr>
+                          <!-- This is our clonable table line -->
+                        </tbody>
+                      </table>
+                      <div class="row">
+                        <div class="col-11"></div>
+                        <div class="col-1"><button type="button" class="btn bottom-0 end-0 btn-primary" id="btn-add-user" >Add</button></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              
+              </div>
               <div class="row"><div id="users-table"></div></div></div>
             <div class="tab-pane fade" id="nav-tree" role="tabpanel" aria-labelledby="nav-tree-tab"><graph></graph></div>
             <div class="tab-pane fade" id="nav-verify" role="tabpanel" aria-labelledby="nav-verify-tab">Verify auth path</div>
@@ -64,52 +127,53 @@
   </div>
 
 
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src = "https://d3js.org/d3.v4.min.js"></script>
-  <!-- <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.0.7/dist/js/tabulator.min.js"></script> -->
-
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js" integrity="sha512-szJ5FSo9hEmXXe7b5AUVtn/WnL8a5VofnFeYC2i2z03uS2LhAch7ewNLbl5flsEmTTimMN0enBZg/3sQ+YOSzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
 
-      // var tabledata = [
-      //     {id:1, name:"Oli Bob", progress:12, gender:"male", rating:1, col:"red", dob:"19/02/1984", car:1},
-      //     {id:2, name:"Mary May", progress:1, gender:"female", rating:2, col:"blue", dob:"14/05/1982", car:true},
-      //     {id:3, name:"Christine Lobowski", progress:42, gender:"female", rating:0, col:"green", dob:"22/05/1982", car:"true"},
-      //     {id:4, name:"Brendon Philips", progress:100, gender:"male", rating:1, col:"orange", dob:"01/08/1980"},
-      //     {id:5, name:"Margret Marmajuke", progress:16, gender:"female", rating:5, col:"yellow", dob:"31/01/1999"},
-      //     {id:6, name:"Frank Harbours", progress:38, gender:"male", rating:4, col:"red", dob:"12/05/1966", car:1},
-      // ];
+    const text = 'An obscure body in the S-K System, your majesty. The inhabitants refer to it as the planet Earth.';
+    var res = sha256(text);
+    console.log("Here is the hash friend: " + res);
+    const $tableID = $('#maintable-table'); 
+    // const $BTN = $('#export-btn'); 
+    // const $EXPORT = $('#export');
 
 
-      // var table = new Tabulator("#users-table", {
-      //     data:tabledata,           //load row data from array
-      //     layout:"fitColumns",      //fit columns to width of table
-      //     responsiveLayout:"hide",  //hide columns that dont fit on the table
-      //     tooltips:true,            //show tool tips on cells
-      //     addRowPos:"top",          //when adding a new row, add it to the top of the table
-      //     history:true,             //allow undo and redo actions on the table
-      //     pagination:"local",       //paginate the data
-      //     paginationSize:7,         //allow 7 rows per page of data
-      //     movableColumns:true,      //allow column order to be changed
-      //     resizableRows:true,       //allow row order to be changed
-      //     initialSort:[             //set the initial sort order of the data
-      //         {column:"name", dir:"asc"},
-      //     ],
-      //     columns:[                 //define the table columns
-      //         {title:"Name", field:"name", editor:"input"},
-      //         {title:"Task Progress", field:"progress", hozAlign:"left", formatter:"progress", editor:true},
-      //         {title:"Gender", field:"gender", width:95, editor:"select", editorParams:{values:["male", "female"]}},
-      //         {title:"Rating", field:"rating", formatter:"star", hozAlign:"center", width:100, editor:true},
-      //         {title:"Color", field:"col", width:130, editor:"input"},
-      //         {title:"Date Of Birth", field:"dob", width:130, sorter:"date", hozAlign:"center"},
-      //         {title:"Driver", field:"car", width:90,  hozAlign:"center", formatter:"tickCross", sorter:"boolean", editor:true},
-      //     ],
-      // });
+    $("#btn-add-user").click(function () { 
+
+      $("#maintable-table").each(function () {
+        
+          var tds = '<tr>';
+          jQuery.each($('tr:last td', this), function () {
+              tds += '<td class="pt-3-half" contenteditable="true">' + $(this).html() + '</td>';
+          });
+          tds += '</tr>';
+          if ($('tbody', this).length > 0) {
+              $('tbody', this).append(tds);
+          } else {
+              $(this).append(tds);
+          }
+      });
+    });
+
+    $tableID.on('click', '.table-remove', function () { $(this).parents('tr').detach(); });
+    $tableID.on('click', '.table-up', function () { 
+      const $row = $(this).parents('tr'); 
+      if($row.index() === 0) { return; } $row.prev().before($row.get(0));
+    }); 
+
+    $tableID.on('click','.table-down', function () { 
+      const $row = $(this).parents('tr');
+      $row.next().after($row.get(0));
+    }); // A few jQuery helpers for exporting only 
+
 
     var treeData =
       {
-        "name": "NODE NAME 1",  
-        "subname": "CODE N1",    
+        "name": "Total: 570",  
+        "subname": "Cmmt: dsak..asfsv",    
         "fill":"orange",
         "children": [
           { 
