fix: commitment row not editable

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                         <tr>
                           <td class="pt-3-half user-id" contenteditable="true">Ron@gmail.com</td>
                           <td class="pt-3-half user-amount" contenteditable="true">30</td>
-                          <td class="pt-3-half user-commitment" contenteditable="true">0bae...d956</td>
+                          <td class="pt-3-half user-commitment">0bae...d956</td>
                           <td>
                             <span class="table-remove"><button type="button"
                                 class="btn btn-danger btn-rounded btn-sm my-0">
@@ -81,7 +81,7 @@
                         <tr>
                           <td class="pt-3-half user-id" contenteditable="true">Shimi@gmail.com</td>
                           <td class="pt-3-half user-amount" contenteditable="true">45</td>
-                          <td class="pt-3-half user-commitment" contenteditable="true">15aj...b923</td>
+                          <td class="pt-3-half user-commitment">15aj...b923</td>
                           <td>
                             <span class="table-remove"><button type="button"
                                 class="btn btn-danger btn-rounded btn-sm my-0">
@@ -93,7 +93,7 @@
                         <tr>
                           <td class="pt-3-half user-id" contenteditable="true">Guadalupe@gmail.com</td>
                           <td class="pt-3-half user-amount" contenteditable="true">3</td>
-                          <td class="pt-3-half user-commitment" contenteditable="true">05ag...bb03</td>
+                          <td class="pt-3-half user-commitment">05ag...bb03</td>
                           <td>
                             <span class="table-remove"><button type="button"
                                 class="btn btn-danger btn-rounded btn-sm my-0">
