--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,9 @@
       </div>
       <div class="row">
         <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-          <button class="nav-link active" id="nav-data-tab" data-bs-toggle="tab" data-bs-target="#nav-data"
+          <button class="nav-link active" id="nav-desc-tab" data-bs-toggle="tab" data-bs-target="#nav-desc"
+            type="button" role="tab" aria-controls="nav-desc" aria-selected="true">Description</button>
+          <button class="nav-link" id="nav-data-tab" data-bs-toggle="tab" data-bs-target="#nav-data"
             type="button" role="tab" aria-controls="nav-data" aria-selected="true">Load Data</button>
           <button class="nav-link" id="nav-tree-tab" data-bs-toggle="tab" data-bs-target="#nav-tree" type="button"
             role="tab" aria-controls="nav-tree" aria-selected="false">Build Tree</button>
@@ -51,7 +53,17 @@
       </div>
       <div class="row">
         <div class="tab-content" id="nav-tabContent">
-          <div class="tab-pane fade show active" id="nav-data" role="tabpanel" aria-labelledby="nav-data-tab">
+          <div class="tab-pane fade show active" id="nav-desc" role="tabpanel" aria-labelledby="nav-desc-tab">
+            <div class="row justify-content-center">
+              <h2>Schema description:</h2>
+            </div>
+            <div class="row">
+
+            <p>Proof of Liabilities (PoL) is a scheme designed to let companies that accept monetary deposits from consumers (e.g. Bitcoin exchanges, gambling websites, online Bitcoin wallets, etc.) prove their total amount of deposits (their liabilities) without compromising the privacy of individual users.
+            </p>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="nav-data" role="tabpanel" aria-labelledby="nav-data-tab">
             <div class="row">
               <div class="card">
                 <div class="card-body">
