fix: adjust desc page

--- a/src/index.html
+++ b/src/index.html
@@ -55,10 +55,9 @@
         <div class="tab-content" id="nav-tabContent">
           <div class="tab-pane fade show active" id="nav-desc" role="tabpanel" aria-labelledby="nav-desc-tab">
             <div class="row justify-content-center">
-              <h2>Schema description:</h2>
+              <h1 class="display-5 text-center">Schema description</h1>
             </div>
-            <div class="row">
-
+            <div class="row text-center">
             <p>Proof of Liabilities (PoL) is a scheme designed to let companies that accept monetary deposits from consumers (e.g. Bitcoin exchanges, gambling websites, online Bitcoin wallets, etc.) prove their total amount of deposits (their liabilities) without compromising the privacy of individual users.
             </p>
             </div>
