feat: change texts

--- a/src/index.html
+++ b/src/index.html
@@ -57,12 +57,27 @@
         <div class="tab-content" id="nav-tabContent">
           <div class="tab-pane fade show active" id="nav-desc" role="tabpanel" aria-labelledby="nav-desc-tab">
             <div class="row justify-content-center">
-              <h1 class="display-5 text-center">Schema description</h1>
+              <h1 class="display-5 text-center">Proof of Liability</h1>
             </div>
+
+            <div class="row justify-content-center">
+              <h1 class="display-7 text-center">Introduction</h1>
+            </div>
+
+
             <div class="row text-center">
             <p>Proof of Liabilities (PoL) is a scheme designed to let companies that accept monetary deposits from consumers (e.g. Bitcoin exchanges, gambling websites, online Bitcoin wallets, etc.) prove their total amount of deposits (their liabilities) without compromising the privacy of individual users.
             </p>
             </div>
+
+            
+            <div class="row justify-content-center">
+              <h1 class="display-7 text-center">How does it work?</h1>
+
+              
+            </div>
+
+
           </div>
           <div class="tab-pane fade" id="nav-data" role="tabpanel" aria-labelledby="nav-data-tab">
             <div class="row">
@@ -81,7 +96,7 @@
                         <tr>
                           <td class="pt-3-half user-id" contenteditable="true">Ron@gmail.com</td>
                           <td class="pt-3-half user-amount" contenteditable="true">30</td>
-                          <td class="pt-3-half user-commitment">0bae...d956</td>
+                          <td class="pt-3-half user-commitment">0eacb4896fa4a123c71dc111b96ff6d00ad654e5943075a250ec11ec50d40aac</td>
                           <td>
                             <span class="table-remove"><button type="button"
                                 class="btn btn-danger btn-rounded btn-sm my-0">
@@ -93,7 +108,7 @@
                         <tr>
                           <td class="pt-3-half user-id" contenteditable="true">Shimi@gmail.com</td>
                           <td class="pt-3-half user-amount" contenteditable="true">45</td>
-                          <td class="pt-3-half user-commitment">15aj...b923</td>
+                          <td class="pt-3-half user-commitment">af5248ac3a481fa9af6c03fdb4071faf509e9738d28db0945b15f99d244d89c0</td>
                           <td>
                             <span class="table-remove"><button type="button"
                                 class="btn btn-danger btn-rounded btn-sm my-0">
@@ -105,7 +120,7 @@
                         <tr>
                           <td class="pt-3-half user-id" contenteditable="true">Guadalupe@gmail.com</td>
                           <td class="pt-3-half user-amount" contenteditable="true">3</td>
-                          <td class="pt-3-half user-commitment">05ag...bb03</td>
+                          <td class="pt-3-half user-commitment">5c3b1cb5348d6dbc5697c6209a2b4814bd6be725f6cd4c10bdb15f4a55eaa591</td>
                           <td>
                             <span class="table-remove"><button type="button"
                                 class="btn btn-danger btn-rounded btn-sm my-0">
