--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,14 @@
   <link rel="stylesheet" href="style.css">
 
   <style>
-    .node rect {
-      stroke-width: 10px;
+    .node text {
+      font: 14px robot;
+      fill: #fff;
+      font-weight: bold;
     }
 
-    .node text {
-      font: 12px sans-serif;
-      fill: #fff;
+    .node text tspan{
+      font-weight: normal;
     }
 
     .link {
@@ -59,10 +60,7 @@
                 <div class="row justify-content-center">
                   <h1 class="display-5 text-center">Proof of Liability</h1>
                 </div>
-<!-- 
-                <div class="row">
-                  <h1 class="display-7 text-center">Introduction</h1>
-                </div> -->
+
                 <div class="row">
                   <h1 class="display-7 offset-md-1">Introduction</h1>
                 </div>
@@ -84,7 +82,7 @@
                 <div class="row">
                   <div class="col-md-9 offset-md-1">
                     <ol>
-                      <li class="mt-2"><strong>Build users data set</strong> - for each user we'll compute his commitment by \(sha256(Id_{user} | balance_{user}) = commitment_{user}\).</li>
+                      <li class="mt-2"><strong>Build users data set</strong> - for each user we'll compute his commitment as follow \(sha256(Id_{user} | balance_{user}) = commitment_{user}\).</li>
                       <li class="mt-2"><strong>Build a liability tree</strong> - based on the users' data set we'll build a summation merkle tree.</li>
                       <li class="mt-2"><strong>The total liability</strong> - will be at the root of the tree. All leafs will be sums up to the root. </li>
                       <li class="mt-2"><strong>Each user can verify</strong> that his liability were taken into account by verify the path from his commitment at the leaf to the published root by Celsius.</li>
@@ -164,8 +162,24 @@
               <div class="tab-pane fade" id="nav-tree" role="tabpanel" aria-labelledby="nav-tree-tab">
                 <graph id='merkle-graph'></graph>
               </div>
-              <div class="tab-pane fade" id="nav-verify" role="tabpanel" aria-labelledby="nav-verify-tab">Verify auth
-                path
+              <div class="tab-pane fade" id="nav-verify" role="tabpanel" aria-labelledby="nav-verify-tab">
+
+                <div class="row">
+                  <h1 class="display-4 offset-md-1">How to verify the audit?</h1>
+                </div>
+
+                <div class="row">
+                  <h1 class="display-7 offset-md-1">The prover publish the root node with a zkp proof</h1>
+                </div>
+
+                <div class="row">
+                  <h1 class="display-7 offset-md-1">The verifer compute his commitment</h1>
+                </div>
+
+                <div class="row">
+                  <h1 class="display-7 offset-md-1">Checks if he got a valid authentication path to the root node</h1>
+                </div>
+
               </div>
             </div>
           </div>
@@ -190,6 +204,358 @@
   <script src="main.js"></script>
   <script id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+
+<script>
+
+const graphColor = ['#0E1766','#710BC2','#F63AAC','#d281d2', '#7aa0cb', '#d281d2','#000000','#F6EBFF'];
+
+$("#nav-tree-tab").click(function () {
+
+  // table to array object
+  var convertedIntoArray = [];
+  $("table#users_table tbody tr").each(function () {
+    var rowData = {};
+    var actualData = $(this).find('td');
+    if (actualData.length > 0) {
+      actualData.each(function () {
+        if ($(this).hasClass("user-id")) {
+          rowData.userId = $(this).text();
+        } else if ($(this).hasClass("user-amount")) {
+          rowData.amount = Number($(this).text());
+        } else if ($(this).hasClass("user-commitment")) {
+          rowData.commitment = $(this).text();
+        }
+      });
+
+      convertedIntoArray.push(rowData);
+    }
+  });
+
+  let treeArr = buildTree(convertedIntoArray);
+
+  let diagramData = treeArrToTreeData(treeArr);
+
+  buildDiagram(diagramData);
+});
+
+
+function buildTree(records) {
+
+// build leaf level 
+
+  let leafLevelLength = 1;
+  for (; leafLevelLength < records.length; leafLevelLength = leafLevelLength * 2) { }
+
+  let leafLevel = [];
+
+  for (let i = 0; i < leafLevelLength; i++) {
+
+    if (i < records.length) {
+      leafLevel.push({ commitment: records[i].commitment, amount: records[i].amount });
+    } else {
+      leafLevel.push({ commitment: sha256(""), amount: 0 });
+    }
+  }
+
+  let levels = [];
+  levels.push(leafLevel);
+
+  let currLevel = leafLevel
+  for (; currLevel.length > 1;) {
+
+    let nextLevel = [];
+    for (let i = 1; i < currLevel.length; i = i + 2) {
+      let nextItem = { commitment: sha256(currLevel[i - 1].commitment + currLevel[i].commitment), amount: currLevel[i - 1].amount + currLevel[i].amount }
+      nextLevel.push(nextItem);
+    }
+
+    levels.push(nextLevel);
+    currLevel = nextLevel;
+  }
+
+  let res = [];
+  for (let i = levels.length; i >= 0; i--) {
+    res.push.apply(res, levels[i])
+  }
+
+  return res;
+}
+
+
+function treeArrToTreeData(array) {
+  let level = 0;
+  let idx = 1;
+  let res = { name: array[idx - 1].amount.toString(), fill: graphColor[level], subname: shortHash(array[level].commitment) }
+  res.children = [];
+  // left child
+
+  let left = recursivee(idx + 1, level + 1, array);
+  if (left) {
+    res.children.push(left);
+  }
+
+  // right child
+
+  let right = recursivee(idx + 2, level + 1, array);
+  if (right) {
+    res.children.push(right);
+  }
+  return res;
+}
+
+function recursivee(idx, level, array) {
+  if (idx > array.length) {
+    return ""
+  }
+
+  let res = { name: array[idx - 1].amount.toString(), fill: graphColor[level], subname: shortHash(array[idx - 1].commitment) }
+  res.children = [];
+
+  // left child
+  let left = recursivee(idx * 2, level+1, array);
+  if (left) {
+    res.children.push(left);
+  }
+
+  // right child
+  let right = recursivee((idx * 2) + 1, level+1, array);
+  if (right) {
+    res.children.push(right);
+  }
+
+  return res
+}
+
+function buildDiagram(treeData) {
+  const myNode = document.getElementById("merkle-graph");
+  myNode.innerHTML = '';
+
+  // Set the dimensions and margins of the diagram
+  var margin = {top: 20, right: 90, bottom: 30, left: 90},
+      width = 960 - margin.left - margin.right,
+      height = 700;
+
+  // append the svg object to the body of the page
+  // appends a 'group' element to 'svg'
+  // moves the 'group' element to the top left margin
+  var svg = d3.select("graph").append("svg")
+      .attr("width", width + margin.right + margin.left)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform", "translate("
+            + margin.left + "," + margin.top + ")");
+
+  var i = 0,
+      duration = 750,
+      root;
+
+  // declares a tree layout and assigns the size
+  var treemap = d3.tree().size([height, width]);
+
+  // Assigns parent, children, height, depth
+  root = d3.hierarchy(treeData, function(d) { return d.children; });
+  root.x0 = height / 2;
+  root.y0 = 0;
+
+  // Collapse after the second level
+  root.children.forEach(collapse);
+
+  update(root);
+
+  // Collapse the node and all it's children
+  function collapse(d) {
+    if(d.children) {
+      d._children = d.children
+      d._children.forEach(collapse)
+      d.children = null
+    }
+  }
+
+  function update(source) {
+
+    // Assigns the x and y position for the nodes
+    var treeData = treemap(root);
+
+    // Compute the new tree layout.
+    var nodes = treeData.descendants(),
+        links = treeData.descendants().slice(1);
+
+    // Normalize for fixed-depth.
+    nodes.forEach(function(d){ d.y = d.depth * 180}); 
+
+    // ****************** Nodes section ***************************
+
+    // Update the nodes...
+    var node = svg.selectAll('g.node')
+        .data(nodes, function(d) {return d.id || (d.id = ++i); });
+
+    // Enter any new modes at the parent's previous position.
+    var nodeEnter = node.enter().append('g')
+        .attr('class', 'node')
+        .attr("transform", function(d) {
+          // BEFORE ....
+          //return "translate(" + source.y0 + "," + source.x0 + ")";
+          // AFTER ....
+          return "translate(" + source.x0 + "," + source.y0 + ")";
+      })
+      .on('click', click);
+
+      var rectHeight = 60, rectWidth = 60;
+      
+      nodeEnter.append('rect')
+        .attr('class', 'node')
+        .attr("width", rectWidth)
+        .attr("height", rectHeight)
+        .attr("x", 0)
+        .attr("stroke", "grey")    
+        .attr("stroke-width", "2.5px") //     stroke-width: 2.5px;
+        .attr("y", (rectHeight/2)*-1)
+        .attr("rx","1")
+        .style("fill", function(d) {
+            return d.data.fill;
+        });
+
+
+    // Add labels for the nodes
+    nodeEnter.append('text')
+        .attr("dy", "-.35em")
+        .attr("x", function(d) {
+          return 20;
+        })
+        .attr("text-anchor", function(d) {
+          return "start";
+        })
+        .text(function(d) { return d.data.name; })
+        .append("tspan")
+        .attr("dy", "1.75em")
+        .attr("x", function(d) {
+          return 13;
+        })
+        .text(function(d) { return d.data.subname; }).attr("x", function(d) {
+          return 4;
+        });
+
+    // UPDATE
+    var nodeUpdate = nodeEnter.merge(node);
+
+    // Transition to the proper position for the node
+    nodeUpdate.transition()
+      .duration(duration)
+      .attr("transform", function(d) { 
+          // BEFORE ....
+          //return "translate(" + d.y + "," + d.x + ")";
+          // AFTER ....
+          return "translate(" + d.x + "," + d.y + ")";
+      });
+
+    // Update the node attributes and style
+    nodeUpdate.select('circle.node')
+      .attr('r', 10)
+      .style("fill", function(d) {
+          return d._children ? "lightsteelblue" : "#fff";
+      })
+      .attr('cursor', 'pointer');
+
+
+    // Remove any exiting nodes
+    var nodeExit = node.exit().transition()
+        .duration(duration)
+        .attr("transform", function(d) {
+            // BEFORE ....
+            //return "translate(" + source.y + "," + source.x + ")";
+            // AFTER ....
+            return "translate(" + source.x + "," + source.y + ")";
+        })
+        .remove();
+
+    // On exit reduce the node circles size to 0
+    nodeExit.select('circle')
+      .attr('r', 1e-6);
+
+    // On exit reduce the opacity of text labels
+    nodeExit.select('text')
+      .style('fill-opacity', 1e-6);
+
+    // ****************** links section ***************************
+
+    // Update the links...
+    var link = svg.selectAll('path.link')
+        .data(links, function(d) { return d.id; });
+
+    // Enter any new links at the parent's previous position.
+    var linkEnter = link.enter().insert('path', "g")
+        .attr("class", "link")
+        .attr('d', function(d){
+          var o = {x: source.x0, y: source.y0}
+          return diagonal(o, o)
+        });
+
+    // UPDATE
+    var linkUpdate = linkEnter.merge(link);
+
+    // Transition back to the parent element position
+    linkUpdate.transition()
+        .duration(duration)
+        .attr('d', function(d){ return diagonal(d, d.parent) });
+
+    // Remove any exiting links
+    var linkExit = link.exit().transition()
+        .duration(duration)
+        .attr('d', function(d) {
+          var o = {x: source.x, y: source.y}
+          return diagonal(o, o)
+        })
+        .remove();
+
+    // Store the old positions for transition.
+    nodes.forEach(function(d){
+      d.x0 = d.x;
+      d.y0 = d.y;
+    });
+
+    // Creates a curved (diagonal) path from parent to the child nodes
+    function diagonal(s, d) {
+
+      // BEFORE ....
+      //path = `M ${s.y} ${s.x}
+      //        C ${(s.y + d.y) / 2} ${s.x},
+      //          ${(s.y + d.y) / 2} ${d.x},
+      //          ${d.y} ${d.x}`
+
+      // AFTER ....
+      path = `M ${s.x + (rectWidth / 2)} ${s.y}
+              C ${(s.x + d.x) / 2 + (rectWidth / 2)} ${s.y},
+                ${(s.x + d.x) / 2 + (rectWidth / 2)} ${d.y},
+                ${d.x + (rectWidth / 2)} ${d.y}`
+                
+      return path
+    }
+
+    // Toggle children on click.
+    function click(d) {
+      if (d.children) {
+          d._children = d.children;
+          d.children = null;
+        } else {
+          d.children = d._children;
+          d._children = null;
+        }
+      update(d);
+    }
+  }
+  }
+
+
+  function shortHash(hash) {
+    let trimmedHash = hash.trim();
+    let first = trimmedHash.substring(0,3);
+    let last = trimmedHash.substring(trimmedHash.length - 3);
+    let res = first + '...' + last;
+
+    return res;
+  }
+
 </script>
 
 </body>
